--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <!--=============== CSS ===============-->
         <link rel="stylesheet" href="assets/css/styles.css">
 
-        <title>Responsive christmas website - Bedimcode</title>
+        <title>Responsive christmas website - Uwaks Teknologi</title>
     </head>
     <body>
         <!--==================== HEADER ====================-->
@@ -200,7 +200,7 @@
                 </ul>
 
                 <span class="footer__copy">
-                    &#169; Copyright Bedimcode. All rights reserved
+                    &#169; Copyright Uwaks Teknologi. All rights reserved
                 </span>
 
                 <img src="assets/img/snow-img.png" alt="footer image" class="footer__snow-1">
